# automations

./: .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  README.md  analyzer.py  classifier.py  claude-proxy.py  config.py  deploy.sh  discovery_extractor.py  emailer.py  fireflies.py  hindsight.py  interview-router.service  main.py  notebooklm.py  notifier.py  pdf_generator.py  pipeline.py  rename_meetings.py  requirements.txt  speaker_roles.py  state.py  teable_client.py  telegram_bot.py  transcript_formatter.py  vm-setup.sh  weekly_report.py  wmill-lock.yaml  wmill.yaml
.github/workflows/: ci.yml  deploy.yml  deploy.yml.test  wmill-sync.yml
.serena/: project.yml
deploy/: telegram-bot.service  weekly-report.service  weekly-report.timer
discovery/baml_src/: extract.baml  types.baml
docs/: explanation-pipeline-design.md  how-to-add-meeting-category.md  how-to-portal.md  how-to-run-pipeline.md  reference-ci-cd.md
tests/: test_classifier.py  test_fireflies.py  test_main.py  test_notebooklm.py  test_notifier.py  test_pdf_generator.py  test_pipeline.py  test_proxy.py  test_speaker_roles.py  test_state.py  test_transcript_formatter.py
vm-api/: .env.example  CLAUDE.md  README.md  analyzer.py  backfill_subcategory.py  backfill_teable.py  classifier.py  config.py  discovery_extractor.py  docx_generator.py  emailer.py  fireflies.py  hindsight.py  main.py  notebooklm.py  notifier.py  pipeline_runner.py  pyproject.toml  rebuild_state.py  state.py  teable_client.py  transcript_formatter.py
vm-api/docs/: architecture.md  backfill-runbook.md  howto-auth-heal.md  pipeline-flow.excalidraw
vm-api/migrations/: 001_add_subcategory_to_insights.sql
vm-api/tests/: test_analyzer_scoping.py  test_auth.py  test_classifier.py  test_digest.py  test_docx_generator.py  test_extractor.py  test_hindsight.py  test_notebooklm.py  test_notifier.py  test_oauth_refresh.py  test_pipeline.py  test_state.py  test_teable_sync.py
(+31 files in other folders)
